--- a/css/styles.css
+++ b/css/styles.css
@@ -285,17 +285,18 @@ h1 {
     background-color: var(--logo-color-main);
 }
 .card-gallery {
-    border: px solid #EEEEEE;
+    border: 1px solid #EEEEEE;
+}
+.title-gallery {
+    padding: 20px 24px;
 }
 .portfolio-gallery {
     flex-wrap: wrap;
     display: flex;
-    gap: 30px;
+    gap: 26px;
 }
 .projects-titles {
-    padding: 20px 24px;
-    margin-top: 20px;
-    margin-bottom: 0;
+    margin: 0 auto;
     color: var(--primary-text-color);
     font-weight: 700;
     font-size: 18px;
@@ -303,9 +304,7 @@ h1 {
     letter-spacing: 0.06em
 }
 .projects-text {
-    margin-bottom: 4px;
-    margin-bottom: 0;
-    padding: 20px 24px;
+    margin: 0 auto;
     color: var(--primary-address-color);
     font-size: 16px;
     line-height: 1.9;
