--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ body {
 /* Header */
 .header {
     padding: 24px 0 30px 0;
+    border-bottom: 1px solid #ECECEC;
 }
 .header-logo {
     color: var(--logo-color-main);
@@ -46,7 +47,7 @@ body {
 .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 10px;
+    padding: 0 15px;
 }
 .header-container {
     display: flex;
@@ -284,11 +285,12 @@ h1 {
     color: var(--logo-color-footer);
     background-color: var(--logo-color-main);
 }
-.card-gallery {
-    border: 1px solid #EEEEEE;
+.card-gallery img {
+    display: block;
 }
 .title-gallery {
     padding: 20px 24px;
+    border: 1px solid #EEEEEE;
 }
 .portfolio-gallery {
     flex-wrap: wrap;
