--- a/css/styles.css
+++ b/css/styles.css
@@ -32,10 +32,10 @@ body {
 }
 /* Header */
 .header {
-    padding: 24px 0 30px 0;
     border-bottom: 1px solid #ECECEC;
 }
 .header-logo {
+    padding: 24px 0 25px 0;
     color: var(--logo-color-main);
     font-family: 'Raleway',sans-serif;
     font-size: 26px;
@@ -72,6 +72,8 @@ body {
     gap: 50px;
 }
 .header-link {
+    display: inline-block;
+    padding: 32px 0;
     color: var(--primary-text-color);
     font-weight: 500;
     font-size: 14px;
@@ -99,11 +101,10 @@ body {
 }
 
 .footer {
+    padding: 60px 0;
     background-color: var(--background-footer-color);
 }
-.container-footer {
-    padding: 60px 0;
-}
+
 .footer-logo {
     display: inline-block;
     margin-bottom: 20px;
@@ -117,7 +118,6 @@ body {
 }
 .address-place {
     display: inline-block;
-    margin-bottom: 9px;
     color: var(--logo-color-footer);
     font-size: 14px;
     line-height: 1.7;
@@ -127,7 +127,11 @@ body {
 .address-place:hover, .address-place:focus {
     color: var(--logo-color-main);
 }
+.address-list {
+    margin-bottom: 9px;
+}
 .main-section-primary {
+    padding: 200px 0;
     background-color: var(--background-footer-color);
     text-align: center;
     text-transform: uppercase;
@@ -147,6 +151,7 @@ h1 {
     margin-right: auto;
 }
 .hero-button {
+    padding: 10px 32px;
     background-color: var(--logo-color-main);
     color: var(--logo-color-footer);
     font-weight: 700;
@@ -155,22 +160,15 @@ h1 {
     text-align: center;
     letter-spacing: 0.06em;
     cursor: pointer;
+    border: none;
 }
 .hero-button:hover, .hero-button:focus {
     background-color: var(--hero-button-hover) ;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
 }
-/* .button {
-    background-color: var(--logo-color-main);
-    color: var(--logo-color-footer);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.9;
-    text-align: center;
-    letter-spacing: 0.06em;
-    cursor: pointer;
-} */
+.section-wrap {
+    padding: 94px 0;
+}
 .visual-hidden {
     position: absolute;
     width: 1px;
@@ -187,9 +185,11 @@ h1 {
     display: flex;
     gap: 30px;
 }
-.container-benefits {
-    padding: 89px 0 94px 0;
+.benefits-list {
+
+    width: 270px;
 }
+
 .subtitle {
     margin: 0 0 10px 0;
     color: var(--primary-text-color);
@@ -206,10 +206,15 @@ h1 {
     line-height: 1.7;
     letter-spacing: 0.03em;
 }
+.section-service {
+    padding-bottom: 94px;
+}
 .service {
     display: flex;
     gap: 30px;
-    padding-bottom: 94px;
+}
+.img-list {
+    display: block;
 }
 .team-section {
     padding: 94px 0;
@@ -258,8 +263,8 @@ h1 {
 .header-link.current {
     color: var(--hero-button-hover);
 }
-.container-filter {
-    padding:110px 0 94px 0;
+.section-filter {
+    padding: 94px 0;
 
 }
 .filter {
@@ -291,6 +296,7 @@ h1 {
 .title-gallery {
     padding: 20px 24px;
     border: 1px solid #EEEEEE;
+    border-top: none;
 }
 .portfolio-gallery {
     flex-wrap: wrap;
