--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ body {
 .address-place:hover, .address-place:focus {
     color: var(--logo-color-main);
 }
-.address-list {
+.address-list:not(:last-child) {
     margin-bottom: 9px;
 }
 .main-section-primary {
@@ -161,6 +161,7 @@ h1 {
     letter-spacing: 0.06em;
     cursor: pointer;
     border: none;
+    border-radius: 4px;
 }
 .hero-button:hover, .hero-button:focus {
     background-color: var(--hero-button-hover) ;
